--- a/eureka-client-demo/pom.xml
+++ b/eureka-client-demo/pom.xml
@@ -11,12 +11,11 @@
 	<name>eureka-client-demo</name>
 	<description>Demo project for Spring Boot</description>
 
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.8.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
+    <parent>
+        <groupId>prx.sun.demo.springboot.module</groupId>
+        <artifactId>springboot-cloud-module</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
