--- a/eureka-server-demo/pom.xml
+++ b/eureka-server-demo/pom.xml
@@ -12,10 +12,9 @@
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.8.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+        <groupId>prx.sun.demo.springboot.module</groupId>
+        <artifactId>springboot-cloud-module</artifactId>
+        <version>1.0-SNAPSHOT</version>
 	</parent>
 
 	<properties>
