--- a/service-ribbon-demo/pom.xml
+++ b/service-ribbon-demo/pom.xml
@@ -44,6 +44,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!--断路器依赖-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+        </dependency>
 	</dependencies>
 
 	<dependencyManagement>
